# mirin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  compare_libraries.py  compare_streaming_libraries.py  matrix.py  model_api.py  phase3.py  phase4_server.py  probelab_branch_worker.py  profile_real_model.py  registry.py  remote_compare.py  run_compare_libraries.py  run_compare_streaming_libraries.py  run_matrix.py  run_model_api.py  run_phase3.py  run_phase4_server.py  run_remote_compare.py  run_runtime_internals.py  runtime_collect_local.py  runtime_collect_stress.py  runtime_internals.py  runtime_internals_shared.py  runtime_internals_workloads.py  runtime_oom_guardrails.py  support.py  testbed_collect.py  tolerances.py
benchmarks/results/: matrix-cuda-bf16-generateoutput-contract.json  matrix-cuda-bf16-latest.json  matrix-cuda-bf16-shared-runtime-v2.json  matrix-cuda-bf16-shared-runtime.json  matrix-cuda-bf16.json  plain-remote-generate-profile.json  remote-compare-gemma3-generate-get-b4.json  remote-compare-gemma3-generate-get.json  remote-compare-llama31-generate-get.json  remote-compare-qwen3-generate-get.json  remote-gemma3-shared-runtime-v2.json  remote-gemma3-shared-runtime.json  remote-llama31-shared-runtime-v2.json  runtime-internals-llama31-shared-runtime-v2.json  runtime-internals-llama31-shared-runtime.json
docs/: BENCHMARKING.md  BENCHMARK_PLAN.md  COMPANION.md  DEBUG_PROFILING.md  MULTIGPU.md  PLAN.md  REAL_MODEL_PROFILE_PLAN.md  REBOOT_PLAN.md  SERVER_API.md  SERVER_OPTS.md  SERVER_PLAN.md
mirin/: __init__.py  batch.py  collect.py  collect_options.py  context.py  counters.py  debug.py  executors.py  hooks.py  maps.py  model.py  refs.py  renames.py  requests.py  utils.py
mirin/runtime/: __init__.py  collector.py  core.py  memory.py  plans.py  prefill.py  results.py  scheduler.py  util.py
mirin/server/: __init__.py  inference.py  memory.py  plans.py  prefill_engine.py  protocol.py  remote.py  scheduler.py
tests/: __init__.py  conftest.py  helpers.py  server_helpers.py  test_batching.py  test_benchmarks_smoke.py  test_cache.py  test_collect.py  test_core.py  test_cuda.py  test_debug.py  test_decode_engine.py  test_executors.py  test_hooks.py  test_output.py  test_phase2_architecture_coverage.py  test_phase3.py  test_prefill_engine.py  test_protocol.py  test_refs.py  test_remote.py  test_requests.py  test_results.py  test_scheduler.py  test_server.py  test_server_core.py  test_server_memory.py  test_server_remote.py  test_server_transformers.py  test_sessions.py  test_transformers_integration.py
tests/api/: __init__.py  test_model_runtime.py
tests/cuda/: __init__.py  test_collect_runtime_cuda.py
tests/runtime/: __init__.py  (+1 more)
tinyinterp/: __init__.py  batch.py  context.py  counters.py  debug.py  hooks.py  model.py  output.py  requests.py  stream.py  utils.py
(+13 files in other folders)
